--- a/inst/reports/xs_metrics_report.Rmd
+++ b/inst/reports/xs_metrics_report.Rmd
@@ -1,39 +1,39 @@
 ---
+title: "FluvialGeomorph Level 2 Report"
 params:
-   xs_points: !r as.data.frame(0)         # data frame
-   xs_dims_planform:                      # sp object
-   flowline:                              # sp object
-   dem: !r.as.raster(0)                   # path to raster
-   banklines:                             # sp object
-   extent_factor: 1
-   stream: "Test"
-   regions: "Eastern United States"
-   bf_estimate: 101
-   features:                              # sp object
-   label_xs: TRUE
-   show_xs_map: FALSE
-   output_format: "html_document"
+  stream: ""
+  flowline_sf:  ""
+  xs_sf: ""
+  xs_dims_sf: ""
+  xs_pts_sf_list: ""
+  dem: ""
+  banklines_sf: ""
+  features_sf: ""
+  bf_estimate: ""
+  regions: ""
+  label_xs: TRUE
+  show_xs_map: FALSE
+  profile_units: "kilometers"
+  aerial: TRUE
+  elevation: FALSE
+  xs_label_freq: 5
+  exaggeration: 10
+  extent_factor: 1.1
+  output_format: "html_document"
 ---
 
-# Reach Metrics: `r params$stream` River
-This report displays cross section dimensions for the given reach.
-
-```{r, library, include=FALSE}
-library(assertthat)
+```{r library, eval=TRUE, include=FALSE}
+library(sf)
 library(dplyr)
 library(knitr)
-library(rmarkdown)
-library(Metrics)
 library(ggplot2)
 library(ggrepel)
-library(reshape2)
-library(kableExtra)
-library(arcgisbinding)
 library(tmap)
-arc.check_product()
+library(arcgisbinding)
+arcgisbinding::arc.check_product()
 ```
 
-```{r, document_type, echo=FALSE}
+```{r output, document_type, echo=FALSE}
 if (params$output_format == "html_document") {
   options(knitr.table.format = "html")
   format <- "html"
@@ -48,37 +48,54 @@ if (params$output_format == "word_document") {
 }
 ```
 
-```{r, calc_xs_dims, echo=FALSE}
-# Calculate cross section dimensions for the reach regional curves graph
-xs_dims <- xs_dimensions(xs_points = params$xs_points,
-                         streams = params$stream,
-                         regions = params$regions,
-                         bankfull_elevations = c(params$bf_estimate))
+## Study Area Overview: `r params$stream`
+```{r aerial_overview, echo=FALSE, warning=FALSE, message=FALSE, results="hide", fig.width=7, fig.height=7, fig.cap="Reach Overview Map"}
+if(aerial) {
+  print(fluvgeo::map_reach_overview(flowline = params$flowline_sf, 
+                                    cross_section = params$cross_section_sf,
+                                    background = "aerial",
+                                    xs_label_freq = params$xs_label_freq,
+                                    extent_factor = params$extent_factor))
+}
 ```
 
-## Study Area Overview
-```{r overview, eval=TRUE, echo=FALSE, fig.width=7, fig.height=7, fig.cap="Reach Overview Map"}
-print(fluvgeo::map_reach_overview(flowline = params$flowline, 
-                              cross_section = params$xs_dims_planform))
+```{r elevation_overview, echo=FALSE, warning=FALSE, message=FALSE, results="hide", fig.width=7, fig.height=7, fig.cap="Reach Elevation Map"}
+if(elevation) {
+  print(fluvgeo::map_reach_overview(flowline = flowline_sf, 
+                                    cross_section = params$cross_section_sf,
+                                    background = "elevation",
+                                    xs_label_freq = params$xs_label_freq,
+                                    exaggeration = params$exaggeration,
+                                    extent_factor = params$extent_factor))
+}
 ```
 
 ## Longitudinal Profile
 ```{r, longitudinal_profile_plot, eval=TRUE, echo=FALSE, results='asis', fig.width=7, fig.height=7, fig.cap="Logitudinal Profile Plot"}
-print(xs_profile_plot(reach_xs_dims = params$xs_dims_planform, 
-                      features = params$features, 
-                      label_xs = params$label_xs))
+
+# Convert to sp
+xs_dims_sf_zm  <- sf::st_zm(params$xs_dims_sf, what = "ZM")
+xs_dims_sp     <- sf::as_Spatial(xs_dims_sf_zm)
+features_sf_zm <- sf::st_zm(params$features_sf, what = "ZM")
+features_sp    <- sf::as_Spatial(features_sf_zm)
+
+print(fluvgeo::xs_profile_plot(reach_xs_dims = xs_dims_sp, 
+                               features = features_sp, 
+                               label_xs = params$label_xs),
+                               profile_units = params$profile_units)
 ```
 
 ## Cross Section Metrics
-```{r, xs_metrics_plot, eval=TRUE, echo=FALSE, results='asis', fig.width=7, fig.height=8, fig.cap="Cross Section Metrics Plot. ", warning=FALSE}
-print(xs_metrics_plot(reach_xs_dims = params$xs_dims_planform@data, 
-                      features_sp = params$features,
-                      label_xs = params$label_xs))
+```{r, xs_metrics_plot, eval=TRUE, echo=FALSE, results='asis', fig.width=7, fig.height=9, fig.cap="Cross Section Metrics Plot. ", warning=FALSE}
+print(fluvgeo::xs_metrics_plot_2(xs_dims_sf = params$xs_dims_sf, 
+                                 features_sf = params$features_sf,
+                                 label_xs = params$label_xs,
+                                 profile_units = params$profile_units))
 ```
 
 ## Width Depth Ratio
 ```{r, wdr_map, eval=TRUE, echo=FALSE, results='asis', fig.width=7, fig.height=8, fig.cap="Width depth Ratio Map", warning=FALSE}
-# Create the FluvialGeomorphicMetric object
+# Create the fluvgeo::FluvialGeomorphicMetric object
 wdr <- new(Class = "FluvialGeomorphicMetric",
            metric = "Width Depth Ratio",
            definition = "bankfull width / bankfull depth",
@@ -91,14 +108,15 @@ wdr <- new(Class = "FluvialGeomorphicMetric",
 
 # Create the reach metric map
 print(fluvgeo::map_reach_metric(wdr,
-                                params$flowline,
-                                params$xs_dims_planform))
+                                flowline = params$flowline_sf,
+                                xs_dimensions = params$xs_dims_sf))
 ```
 
-```{r wdr_plot, echo=FALSE, fig.width=7, fig.cap="Width Depth Ratio Graph", warning=FALSE}
-xs_metric_plot(metric = wdr,
-               reach_xs_dims = params$xs_dims_planform@data,
-               label_xs = TRUE)
+```{r wdr_plot, eval=TRUE, echo=FALSE, fig.width=7, fig.cap="Width Depth Ratio Graph", warning=FALSE}
+print(fluvgeo::xs_metric_plot(metric = wdr,
+                              reach_xs_dims = params$xs_dims_sf,
+                              label_xs = TRUE,
+                              profile_units = params$profile_units))
 ```
 
 ## Radius of Curvature to Bankfull Width
@@ -114,35 +132,43 @@ rc_bfw <- new(Class = "FluvialGeomorphicMetric",
                                    "Stable"),
               source = "Haring, personal communication")
 
-# Create the rech metric map
+# Create the reach metric map
 print(fluvgeo::map_reach_metric(rc_bfw,
-                                params$flowline,
-                                params$xs_dims_planform))
+                                flowline = params$flowline,
+                                xs_dimensions = params$xs_dims_planform))
 ```
 
 ```{r rc_bfw_plot, echo=FALSE, fig.width=7, fig.cap="Radius of Curvature to Bankfull Width Graph", warning=FALSE}
-xs_metric_plot(metric = rc_bfw,
-               reach_xs_dims = params$xs_dims_planform@data,
-               label_xs = TRUE)
+print(fluvgeo::xs_metric_plot(metric = rc_bfw,
+                              reach_xs_dims = params$xs_dims_sf,
+                              label_xs = TRUE,
+                              profile_units = params$profile_units))
 ```
 
 ## Cross Section Geometry
 The figure below displays the selected regional hydraulic geometry curves plotted with the values for each of the cross sections in the current reach.
 
 ```{r, regional_curve_graph, eval=TRUE, echo=FALSE, results='asis', fig.width=7, fig.height=8, fig.cap="Regional Hydraulic Geometry Curves"}
+# Calculate cross section dimensions
+xs_pts <- params$xs_pts_sf_list[[1]]
+
+# Calculate cross section dimensions for the reach regional curves graph
+xs_dims <- xs_dimensions(xs_points = xs_pts,
+                         streams = params$stream,
+                         regions = params$regions,
+                         bankfull_elevations = c(params$bf_estimate))
+
 # Draw reach regional curves graph
-print(reach_rhg_graph(xs_dims = xs_dims,
-                      streams = params$stream,
-                      bf_elevation = params$bf_estimate))
+print(fluvgeo::reach_rhg_graph(xs_dims = xs_dims,
+                               streams = params$stream,
+                               bf_elevation = params$bf_estimate))
 ```
 
 ## Cross Section Profiles
 This section displays cross section profile graphs for each riffle cross section in this stream reach. A table of cross section hydraulic geometry dimensions appears under each cross section profile. The first row contains the hydraulic geometry dimensions for the selected region, while the second row contains hydraulic geometry dimensions for the current cross section.
 
 ```{r, xs_plots, eval=TRUE, echo=FALSE, results='asis', fig.width=7, fig.height=4, warning=TRUE}
-# Iterate through cross sections creating: map, cross section plot, and 
-# RHG table
-xs_pts <- params$xs_points
+# Iterate through xs'ss creating: map, cross section plot, and RHG table
 for (j in as.integer(levels(as.factor(xs_pts$Seq)))) {
   # Create the cross section map
   if(params$show_xs_map) {
