--- a/inst/reports/estimate_bankfull_report.Rmd
+++ b/inst/reports/estimate_bankfull_report.Rmd
@@ -145,14 +145,16 @@ features_sp    <- sf::as_Spatial(features_sf_zm)
 print(fluvgeo::xs_profile_plot(reach_xs_dims = xs_dims_sp, 
                                features = features_sp, 
                                label_xs = params$label_xs,
+                               xs_label_freq = params$xs_label_freq,
                                profile_units = params$profile_units))
 ```
 
 ## Cross Section Metrics
 ```{r, xs_metrics_plot, eval=TRUE, echo=FALSE, results='asis', fig.width=7, fig.height=9, fig.cap="Cross Section Metrics Plot. ", warning=FALSE}
-print(fluvgeo::xs_metrics_plot_2(xs_dims_sf = params$xs_dims_sf, 
+print(fluvgeo::xs_metrics_plot_L2(xs_dims_sf = params$xs_dims_sf, 
                                  features_sf = params$features_sf,
                                  label_xs = params$label_xs,
+                                 xs_label_freq = params$xs_label_freq,
                                  profile_units = params$profile_units))
 ```
 
